# lstm-sensitivity

./: .gitignore  README.md  flake.nix  pyproject.toml
experiments/: exp1_lstm_forcings.py  exp1_vic_forcings.py  exp2_lstm_reproducibility.py  exp2_vic_reproducibility.py  exp3_lstm_nonphysical.py  exp3_vic_nonphysical.py  exp4_lstm_random_error.py  exp4_vic_random_error.py  exp5_lstm_bias.py  exp5_vic_bias.py  exp6_lstm_bias_inference.py  exp6_lstm_random_error_train_only.py  exp6_vic_random_error_train_only.py  exp6b_lstm_random_error_inference.py  exp6b_vic_random_error_inference.py  exp7_lstm_bias_train_only.py  exp7_lstm_random_error_inference.py  exp7_vic_bias_train_only.py  exp7_vic_random_error_inference.py  exp7b_lstm_bias_inference.py  exp7b_vic_bias_inference.py  exp8_lstm_ablation_only_precip.py
figures/: compute_perturbation_metrics.py  fig10_bias_absorption_map.py  fig1_precip_diffs.py  fig2_baseline.py  fig3_reproducibility_ba.py  fig4_reproducibility_map.py  fig5_hydrograph_zerop.py  fig6_ablation_cdfs.py  fig7_zerop_nse_map.py  fig8_perturbation_cdfs.py  fig9_bias_cdfs.py  figS2_ablation_cdfs.py  figSI_bias_cdfs.py  figSI_random_error_cdfs.py  quick_bias_metrics.py  quick_random_error_metrics.py  utils.py
lstm/: camels.py  config.py  create_precip_only_h5.py  evals.py  models.py  perturb.py  train.py  vic.py
