[project]
name = "lstm-sensitivity"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "equinox>=0.13.4",
    "h5py>=3.15.1",
    "jax[cuda]==0.8.1",
    "numpy>=2.4.2",
    "optax>=0.2.7",
    "pandas>=3.0.1",
    "platypus-opt>=1.4.1",
    "tomli-w>=1.2.0",
    "tqdm>=4.67.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["lstm"]

[dependency-groups]
dev = [
    "ipython>=9.10.0",
    "jupyter>=1.1.1",
    "seaborn>=0.13.2",
]
